# pySigma-backend-chronicle

./: .gitignore  LICENSE  README.md  chronicleSigmaCli.py  pyproject.toml
sigma/backends/chronicle/: __init__.py  chronicle_udm.py  chronicle_yaral.py
sigma/pipelines/chronicle/: __init__.py  chronicle.py
tests/: test_backend_chronicle.py  test_pipelines_chronicle.py
